<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="finalproject.csc214.project.login.EmailPasswordSignupFragment">

    <EditText
        android:id="@+id/signup_email_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/GigFinderEditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        style="@style/GigFinderEditText"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/signup_password_confirm_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/GigFinderEditText"
        android:hint="@string/confirm_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_email_password_signup_back_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/GigFinderDarkButton"
            android:text="@string/back"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/fragment_email_password_signup_next_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/GigFinderDarkButton" />

    </LinearLayout>

</LinearLayout>
