<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="finalproject.csc214.project.login.ArtistSignupFragment">

    <EditText
        android:id="@+id/artist_signup_name_edittext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/artist_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        style="@style/GigFinderEditText"/>

    <EditText
        android:id="@+id/artist_signup_hometown_edittext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hometown"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        style="@style/GigFinderEditText"/>

    <Spinner
        android:id="@+id/artist_signup_spinner_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/GigFinderSpinnerItemStyle"
        android:entries="@array/genre_array"/>

    <EditText
        android:id="@+id/artist_signup_bio_edittext"
        android:background="@color/white"
        android:hint="@string/write_a_short_bio_here"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="250dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/fragment_artist_signup_back_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="@style/GigFinderDarkButton"
            android:text="@string/back"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/fragment_artist_signup_submit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/GigFinderDarkButton"/>

    </LinearLayout>

</LinearLayout>
