<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="finalproject.csc214.project.login.LoginFragment">

    <EditText
        android:id="@+id/login_fragment_email_textview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/GigFinderEditText"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/login_fragment_password_textview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        style="@style/GigFinderEditText"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/login_fragment_cancel_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="5dp"
            style="@style/GigFinderDarkButton"/>

        <Button
            android:id="@+id/login_fragment_submit_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/GigFinderDarkButton"/>

    </LinearLayout>

</LinearLayout>
