<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_event_feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="finalproject.csc214.project.feed.EventFeedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/event_feed_events_tab_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAlignment="center"
            style="@style/GigFinderTab"
            android:textSize="22sp"
            android:text="@string/events"/>

        <TextView
            android:id="@+id/event_feed_artists_tab_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="22sp"
            style="@style/GigFinderTab"
            android:textAlignment="center"
            android:text="@string/artists"/>

        <TextView
            android:id="@+id/event_feed_venues_tab_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            style="@style/GigFinderTab"
            android:paddingBottom="12dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/venues"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/feed_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
